Move eval metrics to a separate file
For metrics reusability

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
@@ -507,23 +507,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class METRICS(Enum):\n",
-    "    # coherence metrics\n",
-    "    UMASS = 'u_mass'\n",
-    "    C_V = 'c_v'\n",
-    "    C_UCI = 'c_uci'\n",
-    "    C_NPMI = 'c_npmi'\n",
+    "sys.path.append('../')\n",
     "\n",
-    "    # diversity metrics\n",
-    "    TOPIC_DIVERSITY = 'topic_diversity'\n",
-    "    INVERTED_RBO = 'inverted_rbo'\n",
-    "\n",
-    "    # similarity metrics\n",
-    "    PAIRWISE_JACCARD_SIMILARITY = 'pairwise_jaccard_similarity'\n",
-    "\n",
-    "class SEARCH_BEHAVIOUR(Enum):\n",
-    "    GRID_SEARCH = 'grid_search'\n",
-    "    RANDOM_SEARCH = 'random_search'"
+    "from eval_metrics import compute_inverted_rbo, compute_topic_diversity, compute_pairwise_jaccard_similarity, \\\n",
+    "                        METRICS, SEARCH_BEHAVIOUR"
    ]
   },
   {
@@ -716,74 +703,6 @@
     "        for topic_tuple in document:\n",
     "            topic_document[topic_tuple[0]][ndoc] = topic_tuple[1]\n",
     "    return topic_document"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sys.path.append('../')\n",
-    "from rbo import rbo\n",
-    "\n",
-    "\n",
-    "def compute_topic_diversity(result, topk=10):\n",
-    "    topics = result['topics']\n",
-    "\n",
-    "    if topics is None:\n",
-    "        return 0\n",
-    "\n",
-    "    if topk > len(topics[0]):\n",
-    "        raise Exception('Words in topics are less than ' + str(topk))\n",
-    "    else:\n",
-    "        unique_words = set()\n",
-    "        for topic in topics:\n",
-    "            unique_words = unique_words.union(set(topic[:topk]))\n",
-    "        td = len(unique_words) / (topk * len(topics))\n",
-    "        return td\n",
-    "    \n",
-    "def get_word2index(list1, list2):\n",
-    "    words = set(list1)\n",
-    "    words = words.union(set(list2))\n",
-    "    word2index = {w: i for i, w in enumerate(words)}\n",
-    "    return word2index\n",
-    "    \n",
-    "def compute_inverted_rbo(result, topk=10, weight=0.9):\n",
-    "    topics = result['topics']\n",
-    "\n",
-    "    if topics is None:\n",
-    "        return 0\n",
-    "    \n",
-    "    if topk > len(topics[0]):\n",
-    "        raise Exception('Words in topics are less than topk')\n",
-    "    else:\n",
-    "        collect = []\n",
-    "        for list1, list2 in itertools.combinations(topics, 2):\n",
-    "            word2index = get_word2index(list1, list2)\n",
-    "            indexed_list1 = [word2index[word] for word in list1]\n",
-    "            indexed_list2 = [word2index[word] for word in list2]\n",
-    "            rbo_val = rbo(indexed_list1[:topk], indexed_list2[:topk], p=weight)[2]\n",
-    "            collect.append(rbo_val)\n",
-    "        return 1 - np.mean(collect)\n",
-    "    \n",
-    "def compute_pairwise_jaccard_similarity(result, topk=10):\n",
-    "    topics = result['topics']\n",
-    "    sim = 0\n",
-    "    count = 0\n",
-    "\n",
-    "    if topics is None:\n",
-    "        return 0\n",
-    "    \n",
-    "    if topk > len(topics[0]):\n",
-    "        raise Exception('Words in topics are less than topk')\n",
-    "    else:\n",
-    "        for list1, list2 in itertools.combinations(topics, 2):\n",
-    "            intersection = len(list(set(list1[:topk]).intersection(list2[:topk])))\n",
-    "            union = (len(list1[:topk]) + len(list2[:topk])) - intersection\n",
-    "            count = count + 1\n",
-    "            sim = sim + (float(intersection) / union)\n",
-    "        return sim / float(count)"
    ]
   },
   {
