Code refactoring in metrics

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
@@ -510,7 +510,7 @@
     "sys.path.append('../')\n",
     "\n",
     "from eval_metrics import compute_inverted_rbo, compute_topic_diversity, compute_pairwise_jaccard_similarity, \\\n",
-    "                        METRICS, SEARCH_BEHAVIOUR"
+    "                        METRICS, SEARCH_BEHAVIOUR, COHERENCE_MODEL_METRICS"
    ]
   },
   {
@@ -862,27 +862,10 @@
     "\n",
     "        # compute various metrics\n",
     "        for metric in metrics:\n",
-    "            if metric == METRICS.UMASS:\n",
+    "            if metric in COHERENCE_MODEL_METRICS:\n",
     "                # compute the coherence\n",
     "                coherencemodel = CoherenceModel(model=model, texts=X, dictionary=id2word, coherence=metric.value)\n",
-    "                score = coherencemodel.get_coherence()\n",
-    "\n",
-    "            elif metric == METRICS.C_V:\n",
-    "                # compute the coherence\n",
-    "                coherencemodel = CoherenceModel(model=model, texts=X, dictionary=id2word, coherence=metric.value)\n",
-    "                score = coherencemodel.get_coherence()\n",
-    "\n",
-    "            elif metric == METRICS.C_UCI:\n",
-    "                # compute the coherence\n",
-    "                coherencemodel = CoherenceModel(model=model, texts=X, dictionary=id2word, coherence=metric.value)\n",
-    "                score = coherencemodel.get_coherence()\n",
-    "                \n",
-    "\n",
-    "            elif metric == METRICS.C_NPMI:\n",
-    "                # compute the coherence\n",
-    "                coherencemodel = CoherenceModel(model=model, texts=X, dictionary=id2word, coherence=metric.value)\n",
-    "                score = coherencemodel.get_coherence()\n",
-    "                \n",
+    "                score = coherencemodel.get_coherence()                \n",
     "\n",
     "            elif metric == METRICS.TOPIC_DIVERSITY:\n",
     "                # compute the coherence\n",
@@ -921,10 +904,18 @@
     "        if save_each_models:\n",
     "            model.save(str(model_path.joinpath('lda_multicore')))\n",
     "\n",
+    "            print('Model saved at:', model_path)\n",
+    "\n",
     "        ##########\n",
     "        # Save models ends\n",
     "        ##########\n",
     "            \n",
+    "        ###########\n",
+    "        # Update result dict and json file\n",
+    "        ###########\n",
+    "            \n",
+    "        # init\n",
+    "\n",
     "        model_hyperparameters = deepcopy(hyperparameters)\n",
     "        model_hyperparameters.pop('corpus', '')     # pop as it is not json serializable\n",
     "        model_hyperparameters.pop('id2word', '')    # pop as it is not json serializable\n",
@@ -936,9 +927,7 @@
     "            best_model_path = model_path\n",
     "            best_hyperparameters = model_hyperparameters\n",
     "            \n",
-    "        ###########\n",
-    "        # Update result dict and json file\n",
-    "        ###########\n",
+    "        # update\n",
     "            \n",
     "        model_log_history = dict()\n",
     "        model_log_history.update(metrics_score)         # add the metrics score values to the log history\n",
