resolve pull conflict

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-08/bertopic_demo.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-08/bertopic_demo.ipynb
@@ -265,7 +265,7 @@
     {
      "data": {
       "text/plain": [
-       "6891"
+       "6694"
       ]
      },
      "execution_count": 9,
@@ -290,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-11 18:24:19,915 - BERTopic - Dimensionality - Fitting the dimensionality reduction algorithm\n"
+      "2024-01-20 15:21:30,719 - BERTopic - Dimensionality - Fitting the dimensionality reduction algorithm\n"
      ]
     },
     {
@@ -305,25 +305,25 @@
      "output_type": "stream",
      "text": [
       "UMAP(angular_rp_forest=True, metric='cosine', min_dist=0.0, n_components=5, n_neighbors=50, random_state=42, verbose=True)\n",
-      "Thu Jan 11 18:24:19 2024 Construct fuzzy simplicial set\n",
-      "Thu Jan 11 18:24:20 2024 Finding Nearest Neighbors\n",
-      "Thu Jan 11 18:24:20 2024 Building RP forest with 19 trees\n",
-      "Thu Jan 11 18:24:22 2024 NN descent for 16 iterations\n",
+      "Sat Jan 20 15:21:30 2024 Construct fuzzy simplicial set\n",
+      "Sat Jan 20 15:21:30 2024 Finding Nearest Neighbors\n",
+      "Sat Jan 20 15:21:30 2024 Building RP forest with 19 trees\n",
+      "Sat Jan 20 15:21:33 2024 NN descent for 16 iterations\n",
       "\t 1  /  16\n",
       "\t 2  /  16\n",
       "\t 3  /  16\n",
       "\t 4  /  16\n",
       "\t 5  /  16\n",
       "\tStopping threshold met -- exiting after 5 iterations\n",
-      "Thu Jan 11 18:24:36 2024 Finished Nearest Neighbor Search\n",
-      "Thu Jan 11 18:24:38 2024 Construct embedding\n"
+      "Sat Jan 20 15:21:45 2024 Finished Nearest Neighbor Search\n",
+      "Sat Jan 20 15:21:47 2024 Construct embedding\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed:   2%| ▏          4/200 [00:00]"
+      "Epochs completed:   2%| ▏          3/200 [00:00]"
      ]
     },
     {
@@ -337,7 +337,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed:  11%| █          22/200 [00:04]"
+      "Epochs completed:  11%| █          22/200 [00:03]"
      ]
     },
     {
@@ -351,7 +351,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed:  20%| ██         41/200 [00:08]"
+      "Epochs completed:  21%| ██         42/200 [00:07]"
      ]
     },
     {
@@ -365,7 +365,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed:  30%| ███        61/200 [00:12]"
+      "Epochs completed:  32%| ███▏       63/200 [00:10]"
      ]
     },
     {
@@ -379,7 +379,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed:  41%| ████       82/200 [00:17]"
+      "Epochs completed:  41%| ████       82/200 [00:14]"
      ]
     },
     {
@@ -393,7 +393,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed:  50%| █████      101/200 [00:21]"
+      "Epochs completed:  52%| █████▏     103/200 [00:18]"
      ]
     },
     {
@@ -407,7 +407,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed:  60%| ██████     121/200 [00:25]"
+      "Epochs completed:  61%| ██████     122/200 [00:21]"
      ]
     },
     {
@@ -421,7 +421,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed:  70%| ███████    141/200 [00:29]"
+      "Epochs completed:  71%| ███████    142/200 [00:25]"
      ]
     },
     {
@@ -435,7 +435,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed:  80%| ████████   161/200 [00:34]"
+      "Epochs completed:  81%| ████████   162/200 [00:28]"
      ]
     },
     {
@@ -449,7 +449,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed:  90%| █████████  181/200 [00:38]"
+      "Epochs completed:  91%| █████████  182/200 [00:32]"
      ]
     },
     {
@@ -463,22 +463,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epochs completed: 100%| ██████████ 200/200 [00:42]\n"
+      "Epochs completed: 100%| ██████████ 200/200 [00:35]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Thu Jan 11 18:25:27 2024 Finished embedding\n"
+      "Sat Jan 20 15:22:29 2024 Finished embedding\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-01-11 18:25:28,099 - BERTopic - Dimensionality - Completed ✓\n",
-      "2024-01-11 18:25:28,101 - BERTopic - Cluster - Start clustering the reduced embeddings\n",
+      "2024-01-20 15:22:29,449 - BERTopic - Dimensionality - Completed ✓\n",
+      "2024-01-20 15:22:29,450 - BERTopic - Cluster - Start clustering the reduced embeddings\n",
       "/root/miniforge3/envs/fyp-test-wsl-tm/lib/python3.9/site-packages/hdbscan/hdbscan_.py:1170: DeprecationWarning: `alltrue` is deprecated as of NumPy 1.25.0, and will be removed in NumPy 2.0. Please use `all` instead.\n",
       "  self._all_finite = is_finite(X)\n",
       "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
@@ -505,15 +505,15 @@
       "To disable this warning, you can either:\n",
       "\t- Avoid using `tokenizers` before the fork if possible\n",
       "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n",
-      "2024-01-11 18:25:42,166 - BERTopic - Cluster - Completed ✓\n",
-      "2024-01-11 18:25:42,167 - BERTopic - Representation - Extracting topics from clusters using representation models.\n",
+      "2024-01-20 15:22:39,911 - BERTopic - Cluster - Completed ✓\n",
+      "2024-01-20 15:22:39,911 - BERTopic - Representation - Extracting topics from clusters using representation models.\n",
       "/root/miniforge3/envs/fyp-test-wsl-tm/lib/python3.9/site-packages/bertopic/vectorizers/_ctfidf.py:82: RuntimeWarning: divide by zero encountered in divide\n",
       "  idf = np.log((avg_nr_samples / df)+1)\n",
-      "2024-01-11 18:25:43,694 - BERTopic - Representation - Completed ✓\n",
-      "2024-01-11 18:25:43,695 - BERTopic - Topic reduction - Reducing number of topics\n",
+      "2024-01-20 15:22:41,311 - BERTopic - Representation - Completed ✓\n",
+      "2024-01-20 15:22:41,312 - BERTopic - Topic reduction - Reducing number of topics\n",
       "/root/miniforge3/envs/fyp-test-wsl-tm/lib/python3.9/site-packages/bertopic/vectorizers/_ctfidf.py:82: RuntimeWarning: divide by zero encountered in divide\n",
       "  idf = np.log((avg_nr_samples / df)+1)\n",
-      "2024-01-11 18:25:45,141 - BERTopic - Topic reduction - Reduced number of topics from 75 to 21\n"
+      "2024-01-20 15:22:42,685 - BERTopic - Topic reduction - Reduced number of topics from 64 to 21\n"
      ]
     }
    ],
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8264,10 +8264,9 @@
     "    for idx in empty_topic_idxs[::-1]:\n",
     "        topic_word_matrix = np.delete(topic_word_matrix, idx, axis=0)\n",
     "\n",
-    "    # a better way: https://maartengr.github.io/BERTopic/getting_started/visualization/visualization.html#visualize-probablities-or-distribution\n",
-    "    # TODO: implement that for topic-word-matrix\n",
+    "    # not a better way: https://maartengr.github.io/BERTopic/getting_started/visualization/visualization.html#visualize-probablities-or-distribution\n",
+    "    # as this focuses on how the token in a document is weighted w.r.t. every available topics\n",
     "    \n",
-    "\n",
     "    return topic_word_matrix\n",
     "\n",
     "def _get_topic_document_matrix(probabilities, empty_topic_idxs):\n",
