Save model_name in result json for each model

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
@@ -818,8 +818,10 @@
     "    for search_space_dict in search_iterator:\n",
     "\n",
     "        # create the model folder by using search_space keys and current hyperparams values\n",
+    "        model_name = '_'.join([f'{key}_{value}' for key, value in search_space_dict.items()])\n",
+    "\n",
     "        model_path = save_folder.joinpath(\n",
-    "            'lda_multicore_' + '_'.join([f'{key}_{value}' for key, value in search_space_dict.items()])\n",
+    "            'lda_multicore_' + model_name\n",
     "        )\n",
     "\n",
     "        # check whether the current search space is already trained\n",
@@ -931,6 +933,7 @@
     "            \n",
     "        model_log_history = dict()\n",
     "        model_log_history.update(metrics_score)         # add the metrics score values to the log history\n",
+    "        model_log_history['model_name'] = model_name\n",
     "        model_log_history['hyperparameters'] = model_hyperparameters\n",
     "\n",
     "        result['best_metric'] = best_metric_score\n",
