Add CTM hyperparameter search demo script

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-09/ctm_demo.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-09/ctm_demo.ipynb
@@ -359,6 +359,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(75499, 2000)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_dataset.X_bow.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
    "outputs": [
