Bug fix in updating best hyperparams

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
@@ -793,6 +793,7 @@
     "    best_model_path = result['best_model_checkpoint']\n",
     "    best_metric_score = result['best_metric']\n",
     "    best_model = _load_lda_model(Path(best_model_path)) if best_model_path != \"\" else None\n",
+    "    best_hyperparameters = result['best_hyperparameters']\n",
     "\n",
     "    print(f'Best model checkpoint: {best_model_path}')\n",
     "    print(f'Best metric score: {best_metric_score}')\n",
@@ -938,7 +939,7 @@
     "\n",
     "        result['best_metric'] = best_metric_score\n",
     "        result['best_model_checkpoint'] = str(best_model_path)      # relative path\n",
-    "        result['best_hyperparameters'] = model_hyperparameters\n",
+    "        result['best_hyperparameters'] = best_hyperparameters\n",
     "        result[\"log_history\"].append(model_log_history)\n",
     "\n",
     "        # print(result)\n",
