Print timestamp when printing training log

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
@@ -463,6 +463,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _print_message(message):\n",
+    "    '''Print message with a timestamp in front of it\n",
+    "\n",
+    "    Timestamp format: YYYY-MM-DD HH:MM:SS,mmm\n",
+    "    '''\n",
+    "    print(f'{datetime.now().strftime(\"%Y-%m-%d %H:%M:%S,%f\")[:-3]} - {message}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
    "outputs": [],
@@ -563,7 +577,8 @@
     "        with open(config_path, 'w') as f:\n",
     "            json.dump(config, f, indent=2)\n",
     "\n",
-    "        print('Created config.json at:', config_path)\n",
+    "        _print_message('Created config.json at: ' + str(config_path))\n",
+    "        # print('Created config.json at:', config_path)\n",
     "    else:\n",
     "        with open(config_path, 'r') as f:\n",
     "            config = json.load(f)\n",
@@ -625,8 +640,10 @@
     "            raise Exception(f'monitor is different in config.json. Please modify the hyperparameters passed in.')\n",
     "\n",
     "\n",
-    "        print('Loaded existing config.json from:', config_path)\n",
-    "        print('Hyperparameters and search space are checked to be consistent with config.json')\n",
+    "        _print_message('Loaded existing config.json from: ' + str(config_path))\n",
+    "        _print_message('Hyperparameters and search space are checked to be consistent with config.json')\n",
+    "        # print('Loaded existing config.json from:', config_path)\n",
+    "        # print('Hyperparameters and search space are checked to be consistent with config.json')\n",
     "\n",
     "    return config"
    ]
@@ -657,8 +674,10 @@
     "        elif result['monitor_type'] != monitor_type:\n",
     "            raise Exception(f'metric_type is different in result.json. Please modify the metric_type passed in.')\n",
     "\n",
-    "        print('Loaded existing result.json from:', result_path)\n",
-    "        print('metric_type is checked to be consistent with result.json')\n",
+    "        _print_message('Loaded existing result.json from: ' + str(result_path))\n",
+    "        _print_message('metric_type is checked to be consistent with result.json')\n",
+    "        # print('Loaded existing result.json from:', result_path)\n",
+    "        # print('metric_type is checked to be consistent with result.json')\n",
     "\n",
     "    return result"
    ]
@@ -762,7 +781,8 @@
     "\n",
     "    if run_from_checkpoints:\n",
     "        if not save_folder.exists():\n",
-    "            print('Save folder:' + str(save_folder.resolve()) + ' does not exist. Function terminates.')\n",
+    "            _print_message('Save folder:' + str(save_folder.resolve()) + ' does not exist. Function terminates.')\n",
+    "            # print('Save folder:' + str(save_folder.resolve()) + ' does not exist. Function terminates.')\n",
     "            raise Exception('No checkpoints found. Function terminates.')\n",
     "        \n",
     "        # check for existing configs\n",
@@ -771,7 +791,8 @@
     "        \n",
     "        # check for existing results\n",
     "        if not result_json_path.exists():\n",
-    "            print('no result.json is found. Assuming no existing checkpoints.')\n",
+    "            _print_message('No result.json is found. Assuming no existing checkpoints.')\n",
+    "            # print('No result.json is found. Assuming no existing checkpoints.')\n",
     "    else:\n",
     "        if save_folder.exists():\n",
     "            raise Exception('Checkpoints found. Please delete the checkpoints or set run_from_checkpoints=True. Function terminates.')\n",
@@ -786,7 +807,9 @@
     "\n",
     "    result = _init_result_dict(result_json_path, monitor.value)\n",
     "    \n",
-    "    print(f'Search folder: {save_folder}')\n",
+    "    \n",
+    "    _print_message(f'Search folder: {save_folder}')\n",
+    "    # print(f'Search folder: {save_folder}')\n",
     "\n",
     "\n",
     "    # init\n",
@@ -795,24 +818,19 @@
     "    best_model = _load_lda_model(Path(best_model_path)) if best_model_path != \"\" else None\n",
     "    best_hyperparameters = result['best_hyperparameters']\n",
     "\n",
-    "    print(f'Best model checkpoint: {best_model_path}')\n",
-    "    print(f'Best metric score: {best_metric_score}')\n",
-    "    print(f'Best model: {best_model}')\n",
+    "\n",
+    "    _print_message(f'Best model checkpoint: {best_model_path}')\n",
+    "    _print_message(f'Best metric score: {best_metric_score}')\n",
+    "    _print_message(f'Best model: {best_model}')\n",
+    "    # print(f'Best model checkpoint: {best_model_path}')\n",
+    "    # print(f'Best metric score: {best_metric_score}')\n",
+    "    # print(f'Best model: {best_model}')\n",
     "\n",
     "    # use sklearn to generate the search space instead of generating my myself\n",
     "    if search_behaviour == SEARCH_BEHAVIOUR.GRID_SEARCH:\n",
     "        search_iterator = ParameterGrid(search_space)\n",
     "    elif search_behaviour == SEARCH_BEHAVIOUR.RANDOM_SEARCH:\n",
     "        search_iterator = ParameterSampler(search_space, n_iter=search_n_iter, random_state=search_rs)\n",
-    "\n",
-    "    # get the search space keys\n",
-    "    # keys = list(search_space.keys())\n",
-    "\n",
-    "    # iterate through the search space by using combination func\n",
-    "    # for values in product(*search_space.values()):\n",
-    "\n",
-    "        # create a dict of search space hyperparams\n",
-    "        # search_space_dict = dict(zip(keys, values))\n",
     "    \n",
     "    print('\\n')\n",
     "\n",
@@ -837,7 +855,8 @@
     "        # Training starts\n",
     "        ##########\n",
     "\n",
-    "        print(f'Training with current search space: {search_space_dict}')\n",
+    "        _print_message(f'Training with current search space: {search_space_dict}')\n",
+    "        # print(f'Training with current search space: {search_space_dict}')\n",
     "\n",
     "        # update existing hyperparams dict\n",
     "        hyperparameters.update(search_space_dict)\n",
@@ -858,8 +877,8 @@
     "        result_octis['topics'] = _get_topics(model, hyperparameters['id2word'], result_octis, top_words=10)\n",
     "        result_octis['topic-document-matrix'] = _get_topic_document_matrix(model, corpus, hyperparameters['num_topics'])\n",
     "\n",
-    "\n",
-    "        print('Computing evaluation metrics')\n",
+    "        _print_message('Computing evaluation metrics')\n",
+    "        # print('Computing evaluation metrics')\n",
     "\n",
     "        metrics_score = dict()\n",
     "\n",
@@ -887,7 +906,8 @@
     "            \n",
     "            metrics_score[metric.value] = score\n",
     "\n",
-    "            print(f'Evaluation metric ({metric.value}): {score}')\n",
+    "            _print_message(f'Evaluation metric ({metric.value}): {score}')\n",
+    "            # print(f'Evaluation metric ({metric.value}): {score}')\n",
     "            \n",
     "        # get the monitor score\n",
     "        monitor_score = metrics_score[monitor.value]\n",
@@ -907,6 +927,7 @@
     "        if save_each_models:\n",
     "            model.save(str(model_path.joinpath('lda_multicore')))\n",
     "\n",
+    "            _print_message('Model saved at: ' + str(model_path))\n",
     "            print('Model saved at:', model_path)\n",
     "\n",
     "        ##########\n",
@@ -948,10 +969,12 @@
     "        with open(result_json_path, 'w') as f:\n",
     "            json.dump(result, f, indent=2)\n",
     "\n",
-    "        print(\"Saved result.json at:\", result_json_path)\n",
+    "        _print_message('Saved result.json at: ' + str(result_json_path))\n",
+    "        # print(\"Saved result.json at:\", result_json_path)\n",
     "        print('\\n\\n')\n",
     "\n",
-    "    print('Search ends')\n",
+    "    _print_message('Search ends')\n",
+    "    # print('Search ends')\n",
     "    return best_model, best_model_path, best_hyperparameters\n"
    ]
   },
