--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-09/ctm_demo_gridsearch.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-09/ctm_demo_gridsearch.ipynb
@@ -315,6 +315,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _print_message(message):\n",
+    "    '''Print message with a timestamp in front of it\n",
+    "\n",
+    "    Timestamp format: YYYY-MM-DD HH:MM:SS,mmm\n",
+    "    '''\n",
+    "    print(f'{datetime.now().strftime(\"%Y-%m-%d %H:%M:%S,%f\")[:-3]} - {message}')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -424,7 +438,8 @@
     "        with open(config_path, 'w') as f:\n",
     "            json.dump(config, f, indent=2)\n",
     "\n",
-    "        print('Created config file at {}'.format(config_path))\n",
+    "        _print_message('Created config file at {}'.format(config_path))\n",
+    "        # print('Created config file at {}'.format(config_path))\n",
     "    else:\n",
     "        with open(config_path, 'r') as f:\n",
     "            config = json.load(f)\n",
@@ -468,8 +483,10 @@
     "            for k in search_space_dict['ctm_params'].keys():\n",
     "                assert k in config['search_space']['ctm_params'], f'input search_space_dict[\"ctm_params\"][\"{key}\"] contains value than existing config[\"search_space\"][\"ctm_params\"][\"{key}\"]'\n",
     "        \n",
-    "        print('Loaded existing config file from {}'.format(config_path))\n",
-    "        print('Hyperparameters and search space are consistent with the input parameters')\n",
+    "        _print_message('Loaded existing config file from {}'.format(config_path))\n",
+    "        _print_message('Hyperparameters and search space are consistent with the input parameters')\n",
+    "        # print('Loaded existing config file from {}'.format(config_path))\n",
+    "        # print('Hyperparameters and search space are consistent with the input parameters')\n",
     "\n",
     "    return config\n"
    ]
@@ -496,7 +513,8 @@
     "\n",
     "        assert result['monitor_type'] == monitor_type\n",
     "\n",
-    "        print('Loaded existing result file from {}'.format(result_path))\n",
+    "        _print_message('Loaded existing result file from {}'.format(result_path))\n",
+    "        # print('Loaded existing result file from {}'.format(result_path))\n",
     "    \n",
     "    return result"
    ]
@@ -567,7 +585,8 @@
     "\n",
     "    if run_from_checkpoints:\n",
     "        if not save_folder.exists():\n",
-    "            print('Save folder:' + str(save_folder.resolve()) + ' does not exist. Function terminates.')\n",
+    "            _print_message('Save folder:' + str(save_folder.resolve()) + ' does not exist. Function terminates.')\n",
+    "            # print('Save folder:' + str(save_folder.resolve()) + ' does not exist. Function terminates.')\n",
     "            raise Exception('No checkpoints found. Function terminates.')\n",
     "        \n",
     "        # check for existing configs\n",
@@ -576,7 +595,8 @@
     "        \n",
     "        # check for existing results\n",
     "        if not result_json_path.exists():\n",
-    "            print('no result.json is found. Assuming no existing checkpoints.')\n",
+    "            _print_message('No result.json is found. Assuming no existing checkpoints.')\n",
+    "            # print('No result.json is found. Assuming no existing checkpoints.')\n",
     "    else:\n",
     "        if save_folder.exists():\n",
     "            raise Exception('Checkpoints found. Please delete the checkpoints or set run_from_checkpoints=True. Function terminates.')\n",
@@ -588,7 +608,8 @@
     "                               metrics, monitor, search_behaviour, search_rs, search_n_iter)\n",
     "    result = _init_result_dict(result_json_path, monitor.value)\n",
     "\n",
-    "    print('Search folder: {}'.format(save_folder))\n",
+    "    _print_message('Search folder: {}'.format(save_folder))\n",
+    "    # print('Search folder: {}'.format(save_folder))\n",
     "\n",
     "    # init\n",
     "    best_model_path = result['best_model_checkpoint']\n",
@@ -597,9 +618,13 @@
     "                                 result['best_hyperparameters']['ctm_params']) if best_model_path != \"\" else None\n",
     "    best_hyperparameters = result['best_hyperparameters']\n",
     "\n",
-    "    print(f'Best model checkpoint: {best_model_path}')\n",
-    "    print(f'Best metric score: {best_metric_score}')\n",
-    "    print(f'Best model: {best_model}')\n",
+    "\n",
+    "    _print_message('Best model checkpoint: {}'.format(best_model_path))\n",
+    "    _print_message('Best metric score: {}'.format(best_metric_score))\n",
+    "    _print_message('Best model: {}'.format(best_model))\n",
+    "    # print(f'Best model checkpoint: {best_model_path}')\n",
+    "    # print(f'Best metric score: {best_metric_score}')\n",
+    "    # print(f'Best model: {best_model}')\n",
     "\n",
     "    # search\n",
     "    # like bertopic, we create a temp dict for initiating the search space\n",
@@ -643,14 +668,16 @@
     "\n",
     "        # check whether the model exists\n",
     "        if model_path.exists():\n",
-    "            print('Skipping current search space: {}'.format(search_space_dict))\n",
+    "            _print_message('Skipping current search space: {}'.format(search_space_dict))\n",
+    "            # print('Skipping current search space: {}'.format(search_space_dict))\n",
     "            continue\n",
     "    \n",
     "        ##########\n",
     "        # Training starts\n",
     "        ##########\n",
     "\n",
-    "        print('Current search space: {}'.format(search_space_dict))\n",
+    "        _print_message('Current search space: {}'.format(search_space_dict))\n",
+    "        # print('Current search space: {}'.format(search_space_dict))\n",
     "\n",
     "        sbert_params = deepcopy(config['sbert_params'])     # deepcopy just for safety (not messing up with the original config)\n",
     "        countvect_params = deepcopy(config['countvect_params'])\n",
@@ -686,7 +713,8 @@
     "            with open(embeddings_path, 'rb') as f:\n",
     "                embeddings = np.load(f)\n",
     "\n",
-    "            print(f'Found existing sbert embeddings at {embeddings_path}. Reusing them.')\n",
+    "            _print_message(f'Found existing sbert embeddings at {embeddings_path}. Reusing them.')\n",
+    "            # print(f'Found existing sbert embeddings at {embeddings_path}. Reusing them.')\n",
     "        else:\n",
     "            embeddings = bert_embeddings_from_list(text_for_contextual, **sbert_params, device=device)\n",
     "\n",
@@ -733,7 +761,8 @@
     "        result_octis['topic-word-matrix'] = _get_topic_word_metrix(ctm)\n",
     "        result_octis['topic-document-matrix'] = _get_topic_document_metrix(ctm, training_dataset, n_samples=20)\n",
     "\n",
-    "        print('Compute evaluation metrics')\n",
+    "        _print_message('Compute evaluation metrics')\n",
+    "        # print('Compute evaluation metrics')\n",
     "\n",
     "        metrics_score = dict()\n",
     "\n",
@@ -752,7 +781,8 @@
     "\n",
     "            metrics_score[metric.value] = score\n",
     "\n",
-    "            print(f'Evaluation metric ({metric.value}): {score}')\n",
+    "            _print_message('Evaluation metric ({}): {}'.format(metric.value, score))\n",
+    "            # print(f'Evaluation metric ({metric.value}): {score}')\n",
     "\n",
     "        monitor_score = metrics_score[monitor.value]\n",
     "\n",
@@ -803,11 +833,13 @@
     "        # save result\n",
     "        with open(result_json_path, 'w') as f:\n",
     "            json.dump(result, f, indent=2)\n",
-    "        \n",
-    "        print('Saved result.json at:', result_json_path)\n",
+    "\n",
+    "        _print_message('Saved result.json at: {}'.format(result_json_path))        \n",
+    "        # print('Saved result.json at:', result_json_path)\n",
     "        print('\\n\\n')\n",
     "    \n",
-    "    print('Search ends')\n",
+    "    _print_message('Search ends')\n",
+    "    # print('Search ends')\n",
     "    return best_model, best_model_path, best_hyperparameters\n"
    ]
   },
