Add CountVectorizer to select a fixed number of words
Use CountVectorizer to select words with the top term-frequency.

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
@@ -409,6 +409,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add a sklearn CountVectorizer and select top 2000 words for tm\n",
+    "# ref: https://stackoverflow.com/questions/21552518/using-scikit-learn-vectorizers-and-vocabularies-with-gensim\n",
+    "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "vect = CountVectorizer(ngram_range=(1, 1), stop_words='english', max_features=2000)\n",
+    "corpus_vect = vect.fit_transform(X_lemmatized)\n",
+    "\n",
+    "corpus = gensim.matutils.Sparse2Corpus(corpus_vect, documents_columns=False)\n",
+    "# transform scikit vocabulary into gensim dictionary\n",
+    "id2word = gensim.Dictionary.from_corpus(corpus_vect,\n",
+    "                                    id2word=dict((id, word) for word, id in vect.vocabulary_.items()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use gensim to build a dictionary and train our LDAModel\n",
+    "\n",
+    "id2word = gensim.corpora.Dictionary(X_lemmatized)\n",
+    "\n",
+    "corpus = [id2word.doc2bow(text) for text in X_lemmatized]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
@@ -439,19 +472,6 @@
     "#     X_lemmatized = pickle.load(f)\n",
     "\n",
     "# X_lemmatized[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# use gensim to build a dictionary and train our LDAModel\n",
-    "\n",
-    "id2word = gensim.corpora.Dictionary(X_lemmatized)\n",
-    "\n",
-    "corpus = [id2word.doc2bow(text) for text in X_lemmatized]"
    ]
   },
   {
