Add inference test asserting results
Add inference test to reproduce the topic modeling result (asserting the inferenced topic and probability)

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-08/bertopic_demo.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-08/bertopic_demo.ipynb
@@ -9052,11 +9052,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inference Test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "inference_test = [\"well its been fun guys, but that's it, no more updates, that one was the last one, there is no longer going to be anymore content for this game anymore, there is no way to replay it as there won't be any updates, nope, that was it, the last update, nothing more, this game has no new ways to experience it as there is no more content updates, nothing new to freshen up the experience, its such a shame that this game has no replay-ability, once you beat the game there is like no point to playing again, as they said guys 1.2 will be they final update. nothing more after 1.2, there is no chance they will make another final update right? several years and final updates later: alright, thats it, no more updates we wont be getting anymore, thats it, nothing more, no more updates, for real this time... oh god, redigit made another tweet.\",\n",
+    "                  \"keeps forcing me to play it\",\n",
+    "'''I will leave the cat here, so that everybody who passes by can pet it and give it a thumbs up and awards\n",
+    "　　　 　　／＞　　フ\n",
+    "　　　 　　| 　_　 _ l\n",
+    "　 　　 　／` ミ＿xノ\n",
+    "　　 　 /　　　 　 |\n",
+    "　　　 /　 ヽ　　 ﾉ\n",
+    "　 　 │　　|　|　|\n",
+    "　／￣|　　 |　|　|\n",
+    "　| (￣ヽ＿_ヽ_)__)\n",
+    "　＼二つ''']"
+   ]
   }
  ],
  "metadata": {
