--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-07/read_resultjson.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-07/read_resultjson.ipynb
@@ -3260,6 +3260,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inference test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
