WIP LDA result reproduction

--- a/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
+++ b/NLP/dev-workspace/topic_modelling/demo_2024-01-07/lda_demo_gridsearch.ipynb
@@ -437,6 +437,9 @@
     "\n",
     "id2word = gensim.corpora.Dictionary(X_lemmatized)\n",
     "\n",
+    "# can call the following function to reduce number of words in the dictionary\n",
+    "id2word.filter_extremes(no_below=50)\n",
+    "\n",
     "corpus = [id2word.doc2bow(text) for text in X_lemmatized]"
    ]
   },
