--- a/NLP/dev-workspace/dataset/data_scraping/steam_comments_scraping/steam_comment_scraper_filter.ipynb
+++ b/NLP/dev-workspace/dataset/data_scraping/steam_comments_scraping/steam_comment_scraper_filter.ipynb
@@ -19,20 +19,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# call API to retrieve comments of a game with a game id\n",
     "\n",
-    "# game_steamid = 1716740          # starfield\n",
-    "# game_name = 'starfield'\n",
+    "game_steamid = 1716740          # starfield\n",
+    "game_name = 'starfield'\n",
     "\n",
     "# game_steamid = 2138330          # cyberpunk2077 phantom liberty\n",
     "# game_name = 'cyberpunk2077_phantom_liberty'\n",
     "\n",
-    "game_steamid = 1091500          # cyberpunk2077\n",
-    "game_name = 'cyberpunk2077'\n",
+    "# game_steamid = 1091500          # cyberpunk2077\n",
+    "# game_name = 'cyberpunk2077'\n",
     "\n",
     "params = {\n",
     "    'json':1,\n",
@@ -51,26 +51,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded: cyberpunk2077/steam_reviews_1091500_20240210230848.pkl\n",
-      "Cursor: AoJ4jYX/pPYCcbu/uAI=\n",
-      "No reviews found. To the end of all reviews\n",
-      "Program terminated. Saved to: cyberpunk2077/steam_reviews_1091500_20240210232257.pkl\n"
+      "Loaded: starfield/steam_reviews_1716740_20240210191441.pkl\n",
+      "Cursor: AoJ4lMvys4oDfZT4qwQ=\n"
      ]
     }
    ],
    "source": [
-    "# loop to get comments in range of a day\n",
+    "# load the reviews from folder\n",
     "\n",
-    "# datetime_until = datetime(2024, 1, 1, 0, 0, 0)      # get until...\n",
-    "\n",
-    "checkpoint_counter = 0\n",
     "reviews_reqs = []\n",
     "\n",
     "# get existing folder and retrieve the cursor object (?)\n",
@@ -84,72 +79,31 @@
     "            reviews_reqs = pickle.load(f)           # retrieve the list of reviews\n",
     "            cursor_str = reviews_reqs[-1]['cursor']\n",
     "            print('Loaded:', latest_file_path)\n",
+    "            print('Cursor:', cursor_str)\n",
     "    except IndexError as e:\n",
     "        print('Error loading the latest file:', e)\n",
-    "        traceback.print_exc()\n",
-    "else:\n",
-    "    cursor_str = '*'\n",
-    "\n",
-    "print('Cursor:', cursor_str)\n",
-    "\n",
-    "\n",
-    "save_folder = game_folder\n",
-    "if not save_folder.exists():\n",
-    "    os.makedirs(save_folder)\n",
-    "\n",
-    "while True:\n",
-    "    params['cursor'] = cursor_str\n",
-    "    reviews_req = requests.get(f\"https://store.steampowered.com/appreviews/{game_steamid}\", params=params)\n",
-    "\n",
-    "    reviews_json = reviews_req.json()\n",
-    "    if 'reviews' not in reviews_json:\n",
-    "        print('No reviews found. To the end of all reviews')\n",
-    "        break\n",
-    "    reviews = reviews_json['reviews']\n",
-    "    if len(reviews) == 0:\n",
-    "        print('No reviews found. To the end of all reviews')\n",
-    "        break\n",
-    "    reviews_reqs.append(reviews_json)\n",
-    "    cursor_str = reviews_json['cursor']\n",
-    "    print(f\"Got {len(reviews)} reviews, cursor: {cursor_str}\")\n",
-    "    # if datetime.fromtimestamp(reviews[-1]['timestamp_created']) < datetime_until:\n",
-    "    #     print('Reached until date')\n",
-    "    #     break\n",
-    "\n",
-    "    checkpoint_counter += 1\n",
-    "    if checkpoint_counter % 50 == 0:\n",
-    "        save_filepath = save_folder.joinpath(f'steam_reviews_{game_steamid}_{datetime.now().strftime(\"%Y%m%d%H%M%S\")}.pkl')\n",
-    "        with open(save_filepath, 'wb') as f:\n",
-    "            pickle.dump(reviews_reqs, f)\n",
-    "        print('Saved to:', save_filepath)\n",
-    "        # time.sleep(5)\n",
-    "\n",
-    "    time.sleep(1)\n",
-    "\n",
-    "# save the reviews\n",
-    "with open(save_folder.joinpath(f'steam_reviews_{game_steamid}_{datetime.now().strftime(\"%Y%m%d%H%M%S\")}.pkl'), 'wb') as f:\n",
-    "    pickle.dump(reviews_reqs, f)\n",
-    "print('Program terminated. Saved to:', save_folder.joinpath(f'steam_reviews_{game_steamid}_{datetime.now().strftime(\"%Y%m%d%H%M%S\")}.pkl'))"
+    "        traceback.print_exc()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "5600"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'reviews_reqs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mreviews_reqs\u001b[49m[\u001b[38;5;241m0\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'reviews_reqs' is not defined"
+     ]
     }
    ],
    "source": [
-    "len(reviews_reqs)"
+    "reviews_reqs[0]"
    ]
   },
   {
@@ -160,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2024, 2, 10, 11, 1, 14)"
+       "1088"
       ]
      },
      "execution_count": 5,
@@ -169,8 +123,82 @@
     }
    ],
    "source": [
-    "datetime.fromtimestamp(1707534074)      # its a unix timestamp, to our timezone (GMT+8)."
+    "len(reviews_reqs)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "96734"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_list = []\n",
+    "\n",
+    "for reviews_req in reviews_reqs:\n",
+    "    review_list.extend(reviews_req['reviews'])\n",
+    "\n",
+    "# filter by unique 'recommendationid'\n",
+    "unique_review_list = []\n",
+    "unique_review_ids = set()\n",
+    "\n",
+    "for review in review_list:\n",
+    "    if review['recommendationid'] not in unique_review_ids:\n",
+    "        unique_review_list.append(review)\n",
+    "        unique_review_ids.add(review['recommendationid'])\n",
+    "\n",
+    "len(unique_review_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Very similar to the time I read the number of reviews: 96741, at 20240211:000030"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save the unique reviews\n",
+    "\n",
+    "with open(f'./{game_name}/steam_reviews_{game_steamid}_unique.pkl', 'wb') as f:\n",
+    "    pickle.dump(unique_review_list, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The number excludes off-topic reviews (??)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
